[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Root_to_DataFrame_MT"
version = "0.0.3"
authors = [{ name = "Lorenzo Principe", email = "lorenzomag@hotmail.it" }]
dependencies = ["numpy", "pandas", "uproot"]
description = "Create a class that loads a .root file into pandas DataFrames"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
